# LIPS-stack

./: .env.example  .gitattributes  .gitignore  README.md  start.bat  start.sh
backend/: lips_runner.py  main.py  requirements.txt  viz_pipeline.py
backend/tests/: conftest.py  helpers.py  test_files.py  test_stages.py  test_viz_pipeline.py  test_websocket.py  test_workspace.py
docs/: architecture.md  generative-ui-guardrails.md  testing.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.tsx  index.css  test-setup.ts
frontend/src/__tests__/: App.test.tsx  ConsolePane.test.tsx  ControlPanel.test.tsx  VisualizerPane.test.tsx
frontend/src/components/: ApiKeyModal.tsx  ConsolePane.tsx  ControlPanel.tsx  EditorPane.tsx  VisualizerPane.tsx
lips/: api.py  compile.py  files.py  pyproject.toml
templates/physical-simulations/newtonian-2d-pipeline/code-raw/configs/: prompt-template.html
templates/physical-simulations/newtonian-2d-pipeline/specifications/configs/: prompt-template.html
templates/physical-simulations/newtonian-3d-pipeline/code-raw/configs/: api.json
templates/physical-simulations/newtonian-3d-pipeline/configs/: config.json
templates/physical-simulations/newtonian-3d-pipeline/requirements/configs/: prompt-template.html
