[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lips"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["lips"]

[tool.setuptools.package-dir]
lips = "."
